// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`script-tag.hbs - {"embeddedLanguageFormatting":"off"} format 1`] = `
====================================options=====================================
embeddedLanguageFormatting: "off"
parsers: ["glimmer"]
                                                      printWidth: 80 (default) |
=====================================input======================================
<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
<script></script>

<script type="text/javascript">
  const interval = setInterval( function() {
    var timestamp = Date.now();
    console.log(timestamp);
  }, 1000
  ); var a = 5;
</script>

<script type="module">
  import a from "a"; export const b = a
</script>

<script>
  import a from "a"; export const b = a
</script>

<script>
  const a = await fetch("a");
  console.log( a );
</script>

<script type="module">
  const a = await fetch("a");
  console.log( a );
</script>

<script type="application/ld+json">
  { "@context": "https://schema.org" }
</script>

<script>
  var user = "{{user.name}}";
  {{#if debug}}console.log("debug");{{/if}}
</script>

<script>
  const template = html\`<div><script>a<\\/script></div>\`;
</script>

=====================================output=====================================
<script
  src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"
></script>
<script></script>

<script type="text/javascript">
  const interval = setInterval( function() {
    var timestamp = Date.now();
    console.log(timestamp);
  }, 1000
  ); var a = 5;
</script>

<script type="module">
  import a from "a"; export const b = a
</script>

<script>
  import a from "a"; export const b = a
</script>

<script>
  const a = await fetch("a");
  console.log( a );
</script>

<script type="module">
  const a = await fetch("a");
  console.log( a );
</script>

<script type="application/ld+json">
  { "@context": "https://schema.org" }
</script>

<script>
  var user = "{{user.name}}";
  {{#if debug}}console.log("debug");{{/if}}
</script>

<script>
  const template = html\`<div><script>a<\\/script></div>\`;
</script>
================================================================================
`;

exports[`script-tag.hbs format 1`] = `
====================================options=====================================
parsers: ["glimmer"]
                                                      printWidth: 80 (default) |
=====================================input======================================
<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
<script></script>

<script type="text/javascript">
  const interval = setInterval( function() {
    var timestamp = Date.now();
    console.log(timestamp);
  }, 1000
  ); var a = 5;
</script>

<script type="module">
  import a from "a"; export const b = a
</script>

<script>
  import a from "a"; export const b = a
</script>

<script>
  const a = await fetch("a");
  console.log( a );
</script>

<script type="module">
  const a = await fetch("a");
  console.log( a );
</script>

<script type="application/ld+json">
  { "@context": "https://schema.org" }
</script>

<script>
  var user = "{{user.name}}";
  {{#if debug}}console.log("debug");{{/if}}
</script>

<script>
  const template = html\`<div><script>a<\\/script></div>\`;
</script>

=====================================output=====================================
<script
  src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"
></script>
<script></script>

<script type="text/javascript">
  const interval = setInterval(function () {
    var timestamp = Date.now();
    console.log(timestamp);
  }, 1000);
  var a = 5;
</script>

<script type="module">
  import a from "a";
  export const b = a;
</script>

<script>
  import a from "a";
  export const b = a;
</script>

<script>
  const a = await fetch("a");
  console.log( a );
</script>

<script type="module">
  const a = await fetch("a");
  console.log(a);
</script>

<script type="application/ld+json">
  { "@context": "https://schema.org" }
</script>

<script>
  var user = "{{user.name}}";
  {{#if debug}}console.log("debug");{{/if}}
</script>

<script>
  const template = html\`<div>
    <script>
      a;
    <\\/script>
  </div>\`;
</script>
================================================================================
`;
